Register Endpoint done
