# app/DTOs/CreateUserDTO.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\DTOs;
+
+use Spatie\LaravelData\Data;
+
+class CreateUserDTO extends Data
+{
+    public function __construct(
+        public string $email,
+        public string $name,
+        public string $phone,
+        public string $password,
+    ) {}
+}
