# lang/ru/validation.php
@@ -1,0 +1,163 @@
+<?php
+
+return [
+
+    /*
+    |--------------------------------------------------------------------------
+    | Validation Language Lines
+    |--------------------------------------------------------------------------
+    |
+    | The following language lines contain the default error messages used by
+    | the validator class. Some of these rules have multiple versions such
+    | as the size rules. Feel free to tweak each of these messages here.
+    |
+    */
+    'accepted' => 'Поле :attribute должно быть принято.',
+    'accepted_if' => 'Поле :attribute должно быть принято, если :other равно :value.',
+    'active_url' => 'Поле :attribute должно быть действительным URL.',
+    'after' => 'Поле :attribute должно быть датой после :date.',
+    'after_or_equal' => 'Поле :attribute должно быть датой после или равной :date.',
+    'alpha' => 'Поле :attribute может содержать только буквы.',
+    'alpha_dash' => 'Поле :attribute может содержать только буквы, цифры, дефисы и нижние подчеркивания.',
+    'alpha_num' => 'Поле :attribute может содержать только буквы и цифры.',
+    'array' => 'Поле :attribute должно быть массивом.',
+    'ascii' => 'Поле :attribute может содержать только однобайтовые алфавитно-цифровые символы и символы.',
+    'before' => 'Поле :attribute должно быть датой до :date.',
+    'before_or_equal' => 'Поле :attribute должно быть датой до или равной :date.',
+    'between' => [
+        'array' => 'Поле :attribute должно содержать от :min до :max элементов.',
+        'file' => 'Размер файла в поле :attribute должен быть от :min до :max килобайт.',
+        'numeric' => 'Поле :attribute должно быть между :min и :max.',
+        'string' => 'Поле :attribute должно содержать от :min до :max символов.',
+    ],
+    'boolean' => 'Поле :attribute должно быть истинным или ложным.',
+    'can' => 'Поле :attribute содержит неразрешенное значение.',
+    'confirmed' => 'Поле подтверждения :attribute не совпадает.',
+    'contains' => 'Поле :attribute не содержит необходимое значение.',
+    'current_password' => 'Неверный пароль.',
+    'date' => 'Поле :attribute должно быть действительной датой.',
+    'date_equals' => 'Поле :attribute должно быть датой, равной :date.',
+    'date_format' => 'Поле :attribute должно соответствовать формату :format.',
+    'decimal' => 'Поле :attribute должно содержать :decimal десятичных разрядов.',
+    'declined' => 'Поле :attribute должно быть отклонено.',
+    'declined_if' => 'Поле :attribute должно быть отклонено, если :other равно :value.',
+    'different' => 'Поле :attribute и :other должны быть разными.',
+    'digits' => 'Поле :attribute должно содержать :digits цифр.',
+    'digits_between' => 'Поле :attribute должно содержать от :min до :max цифр.',
+    'dimensions' => 'Поле :attribute имеет недопустимые размеры изображения.',
+    'distinct' => 'Поле :attribute имеет повторяющееся значение.',
+    'doesnt_end_with' => 'Поле :attribute не должно заканчиваться одним из следующих значений: :values.',
+    'doesnt_start_with' => 'Поле :attribute не должно начинаться с одного из следующих значений: :values.',
+    'email' => 'Поле :attribute должно быть действительным адресом электронной почты.',
+    'ends_with' => 'Поле :attribute должно заканчиваться одним из следующих значений: :values.',
+    'enum' => 'Выбранное значение для :attribute недействительно.',
+    'exists' => 'Выбранное значение для :attribute недействительно.',
+    'extensions' => 'Поле :attribute должно иметь одно из следующих расширений: :values.',
+    'file' => 'Поле :attribute должно быть файлом.',
+    'filled' => 'Поле :attribute должно иметь значение.',
+    'gt' => [
+        'array' => 'Поле :attribute должно содержать более :value элементов.',
+        'file' => 'Поле :attribute должно быть больше :value килобайт.',
+        'numeric' => 'Поле :attribute должно быть больше :value.',
+        'string' => 'Поле :attribute должно быть длиннее :value символов.',
+    ],
+    'gte' => [
+        'array' => 'Поле :attribute должно содержать :value элементов или более.',
+        'file' => 'Поле :attribute должно быть больше или равно :value килобайт.',
+        'numeric' => 'Поле :attribute должно быть больше или равно :value.',
+        'string' => 'Поле :attribute должно быть длиннее или равно :value символов.',
+    ],
+    'hex_color' => 'Поле :attribute должно быть допустимым шестнадцатеричным цветом.',
+    'image' => 'Поле :attribute должно быть изображением.',
+    'in' => 'Выбранный :attribute недопустим.',
+    'in_array' => 'Поле :attribute должно существовать в :other.',
+    'integer' => 'Поле :attribute должно быть целым числом.',
+    'ip' => 'Поле :attribute должно быть действительным IP-адресом.',
+    'ipv4' => 'Поле :attribute должно быть действительным IPv4-адресом.',
+    'ipv6' => 'Поле :attribute должно быть действительным IPv6-адресом.',
+    'json' => 'Поле :attribute должно быть допустимой JSON строкой.',
+    'list' => 'Поле :attribute должно быть списком.',
+    'lowercase' => 'Поле :attribute должно быть в нижнем регистре.',
+    'lt' => [
+        'array' => 'Поле :attribute должно содержать менее :value элементов.',
+        'file' => 'Поле :attribute должно быть меньше :value килобайт.',
+        'numeric' => 'Поле :attribute должно быть меньше :value.',
+        'string' => 'Поле :attribute должно быть короче :value символов.',
+    ],
+    'lte' => [
+        'array' => 'Поле :attribute не должно содержать более :value элементов.',
+        'file' => 'Поле :attribute должно быть меньше или равно :value килобайт.',
+        'numeric' => 'Поле :attribute должно быть меньше или равно :value.',
+        'string' => 'Поле :attribute должно быть короче или равно :value символов.',
+    ],
+    'mac_address' => 'Поле :attribute должно быть действительным MAC-адресом.',
+    'max' => [
+        'array' => 'Поле :attribute не должно содержать более :max элементов.',
+        'file' => 'Поле :attribute не должно превышать :max килобайт.',
+        'numeric' => 'Поле :attribute не должно быть больше :max.',
+        'string' => 'Поле :attribute не должно превышать :max символов.',
+    ],
+    'max_digits' => 'Поле :attribute не должно содержать более :max цифр.',
+    'mimes' => 'Поле :attribute должно быть файлом одного из следующих типов: :values.',
+    'mimetypes' => 'Поле :attribute должно быть файлом одного из следующих типов: :values.',
+    'min' => [
+        'array' => 'Поле :attribute должно содержать не менее :min элементов.',
+        'file' => 'Поле :attribute должно быть не менее :min килобайт.',
+        'numeric' => 'Поле :attribute должно быть не менее :min.',
+        'string' => 'Поле :attribute должно содержать не менее :min символов.',
+    ],
+    'min_digits' => 'Поле :attribute должно содержать не менее :min цифр.',
+    'missing' => 'Поле :attribute должно отсутствовать.',
+    'missing_if' => 'Поле :attribute должно отсутствовать, когда :other равно :value.',
+    'missing_unless' => 'Поле :attribute должно отсутствовать, если :other не равно :value.',
+    'missing_with' => 'Поле :attribute должно отсутствовать, если присутствует :values.',
+    'missing_with_all' => 'Поле :attribute должно отсутствовать, если присутствуют :values.',
+    'multiple_of' => 'Поле :attribute должно быть кратно :value.',
+    'not_in' => 'Выбранный :attribute недопустим.',
+    'not_regex' => 'Формат поля :attribute недопустим.',
+    'numeric' => 'Поле :attribute должно быть числом.',
+    'password' => [
+        'letters' => 'Поле :attribute должно содержать хотя бы одну букву.',
+        'mixed' => 'Поле :attribute должно содержать хотя бы одну заглавную и одну строчную букву.',
+        'numbers' => 'Поле :attribute должно содержать хотя бы одну цифру.',
+        'symbols' => 'Поле :attribute должно содержать хотя бы один символ.',
+        'uncompromised' => 'Данный :attribute упоминался в утечке данных. Пожалуйста, выберите другой :attribute.',
+    ],
+    'present' => 'Поле :attribute должно быть присутствующим.',
+    'present_if' => 'Поле :attribute должно быть присутствующим, когда :other имеет значение :value.',
+    'present_unless' => 'Поле :attribute должно быть присутствующим, если :other не имеет значения :value.',
+    'present_with' => 'Поле :attribute должно быть присутствующим, когда :values присутствуют.',
+    'present_with_all' => 'Поле :attribute должно быть присутствующим, когда все :values присутствуют.',
+    'prohibited' => 'Поле :attribute запрещено.',
+    'prohibited_if' => 'Поле :attribute запрещено, когда :other имеет значение :value.',
+    'prohibited_unless' => 'Поле :attribute запрещено, если :other не входит в :values.',
+    'prohibits' => 'Поле :attribute запрещает наличие поля :other.',
+    'regex' => 'Неверный формат поля :attribute.',
+    'required' => 'Поле :attribute обязательно для заполнения.',
+    'required_array_keys' => 'Поле :attribute должно содержать записи для: :values.',
+    'required_if' => 'Поле :attribute обязательно, когда :other имеет значение :value.',
+    'required_if_accepted' => 'Поле :attribute обязательно, когда :other принято.',
+    'required_if_declined' => 'Поле :attribute обязательно, когда :other отклонено.',
+    'required_unless' => 'Поле :attribute обязательно, если :other не входит в :values.',
+    'required_with' => 'Поле :attribute обязательно, когда :values присутствуют.',
+    'required_with_all' => 'Поле :attribute обязательно, когда все :values присутствуют.',
+    'required_without' => 'Поле :attribute обязательно, когда :values отсутствуют.',
+    'required_without_all' => 'Поле :attribute обязательно, когда ни одно из :values отсутствует.',
+    'same' => 'Поле :attribute должно совпадать с полем :other.',
+    'size' => [
+        'array' => 'Поле :attribute должно содержать :size элементов.',
+        'file' => 'Поле :attribute должно быть размером :size килобайт.',
+        'numeric' => 'Поле :attribute должно быть равно :size.',
+        'string' => 'Поле :attribute должно содержать :size символов.',
+    ],
+    'starts_with' => 'Поле :attribute должно начинаться с одного из следующих значений: :values.',
+    'string' => 'Поле :attribute должно быть строкой.',
+    'timezone' => 'Поле :attribute должно быть допустимым часовым поясом.',
+    'unique' => 'Значение поля :attribute уже используется.',
+    'uploaded' => 'Не удалось загрузить файл :attribute.',
+    'uppercase' => 'Поле :attribute должно быть в верхнем регистре.',
+    'url' => 'Поле :attribute должно быть допустимым URL.',
+    'ulid' => 'Поле :attribute должно быть допустимым ULID.',
+    'uuid' => 'Поле :attribute должно быть допустимым UUID.',
+    'my_exists' => 'Выбранное значение для :attribute недействительно.',
+];
