# routes/api.php
@@ -1,6 +1,13 @@
 <?php
 
 use App\Http\Controllers\TestController;
+use App\Http\Controllers\UserController;
+use App\Http\Middleware\GuestMiddleware;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/health', [TestController::class, 'health']);
+
+Route::middleware(GuestMiddleware::class)->group(function () {
+
+    Route::post('/register', [UserController::class, 'store']);
+});
